@@ -1,5 +1,6 @@
 AUX 389-adminutil-1.1.8-no_icu_pc.patch 962 RMD160 88c705be3519860e64ab88c0ccafa74aa6fcf4bf SHA1 8c3b9c8488146cd35c834a2781958e78d35ac63a SHA256 188236e9be627f464b317d7f647b623c4e7f60268cbc813451581536fabeaaf0
 DIST 389-adminutil-1.1.8.tar.bz2 307299 RMD160 9ff2a965e27f6a8eee22fc4375f0c06c4f49fb5e SHA1 ff2090c74f63cce65f8222263207ee5442a9e325 SHA256 d0b6e7447035cecb0b37c38f58eea6a677642b5e07f3f9e6e342e35ddeffa2a4
+EBUILD 389-adminutil-1.1.8-r1.ebuild 828 RMD160 8a1ea2575547fdbe3b40a06e2b1bbb4a1ae605a9 SHA1 c6e6742d42b6e9556957cf3244697077de7c262c SHA256 d240e05f14fdfcf7611f5950659c42e70fafa75f0ee2b1e89cf7ba58d178f3f6
 EBUILD 389-adminutil-1.1.8.ebuild 1029 RMD160 8b29c9902a48a8f4421bba72c5ba208a8fce37d1 SHA1 4715eb8b4819281c825879f04f7163dd7b7d0094 SHA256 381255ab6d6b6ca7c7c0df0be0e1738dc059b10c30fb8d38e5fa74e5e0eed60c
-MISC ChangeLog 322 RMD160 2916d2ad22bfe6ebb6860aee05210108686d3e4e SHA1 1ef0080ade455ed9e219b7b2e7c5fd350ed9e0df SHA256 8339a327a320b91f1bf653f7e82b02bd03885d607acd6b3aee691147a3b6811e
+MISC ChangeLog 430 RMD160 f6e27d40b7d010ce9af93e5e35f1f67d9516a52c SHA1 b8ca4509ac487d9b6ca21bea5fd6bb4337cffadd SHA256 956fa35de6c1fbe2ece5acf576b9f6bc6ef890a84835ddfe0f2c824fe419d3f4
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
